fixed code and added changes to java doc and queries